--- a/Proyecto_3erP/public/css/Cliente.css
+++ b/Proyecto_3erP/public/css/Cliente.css
@@ -19,12 +19,6 @@ h1 {
   letter-spacing: 2px;
 }
 
-h2 {
-  font-size: 30px;
-  font-weight: bolder;
-  text-align: center; 
-  margin: 40px 0;
-}
 
 .user {
   display: inline-block;
@@ -32,6 +26,9 @@ h2 {
   right: 0;
   margin-right: 5%;
   height: 50px;
+}
+.user:hover{
+  box-shadow: 0 0 70px rgba(0, 0, 0, 0.2);
 }
 
 .carrito {
@@ -41,6 +38,7 @@ h2 {
   margin-right: 15%;
   height: 50px;
 }
+
 
 ul {
   list-style-type: none;
